--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: node.js 
+language : node.js
+sudo     : required
 
 services:
   - docker 
 
 before_install:
-  docker build -t zoda100/visits:latest 
+  docker build -t zoda100/visits:latest  -f Dockerfile.dev . 
+
+scripts:
+  docker run -e CI=true -it zoda100/visits:latest yarn test
