--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   docker build -t zoda100/visits:latest  -f Dockerfile.dev . 
 
 scripts:
-  docker run -e CI=true -it zoda100/visits:latest yarn test
+  docker run -e CI=true -it zoda100/visits:latest npm test -- --coverage
